--- a/_docs/TODO
+++ b/_docs/TODO
@@ -7,3 +7,4 @@
 * full double quote strings support
 * template serialization/deserialization
 * filesystem bytecode cache
+* float literals, values and constants
