todo: mention that internal classes should be moved

--- a/_docs/TODO
+++ b/_docs/TODO
@@ -7,3 +7,4 @@
 * builtin functions
 * macros system
 * compile errors for long jumps/too many consts and vars, etc
+* move internal classes to internal folders
