--- a/_docs/TODO
+++ b/_docs/TODO
@@ -1,5 +1,5 @@
 * docs: add examples
 * more end2end tests
-* builtin functions
+* builtin functions (like in_array)
 * reconsider default autoescape strategy
 * use codegen for Expr class and expr kind predicates
